[project]
name = "mcp-playground"
version = "0.1.0"
description = ""
authors = [
    {name = "giridhar",email = "gidpatri+projects@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "openai (>=1.93.0,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
